<resources xmlns:http="http://schemas.android.com/apk/res-auto">
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="MainActivity">0</string>
    <string name="ArroundActivity">1</string>
    <string name="OrderActivity">2</string>
    <string name="AccountActivity">3</string>
    <string name="r_chinese">中餐馆</string>
    <string name="r_west">西餐馆</string>
    <string name="r_fast">快餐</string>
    <string name="r_japanese">日料</string>
    <string name="app_name">DB_Project</string>
    <string name="tab_text_1">待处理订单</string>
    <string name="tab_text_2">全部订单</string>
    <string name="tab_text_3">历史订单</string>
    <string name="title_around">周围</string>
    <string name="title_home">主页</string>
    <string name="title_order">订单</string>
    <string name="title_account">账户</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="title_activity_maps">Map</string>
    <string name="LoginServlet">http://10.21.99.25:8080/LoginServlet</string>
    <string name="title_activity_launcher">LauncherActivity</string>
</resources>
